crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-cayenne[file]-cte_materialization_tpcds_q87.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q87"
---
+----------+
| count(*) |
+----------+
| 46449    |
+----------+
