crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-cayenne[file]-cte_materialization_tpcds_q97.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q97"
---
+------------+--------------+-------------------+
| store_only | catalog_only | store_and_catalog |
+------------+--------------+-------------------+
| 532651     | 285222       | 142               |
+------------+--------------+-------------------+
