crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-cayenne[file]-indexes_tpcds_q59.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q59"
---
+---------------+------------------+-------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+
| s_store_name1 | s_store_id1      | d_week_seq1 | y.sun_sales1 / x.sun_sales2 | y.mon_sales1 / x.mon_sales2 | y.tue_sales1 / x.tue_sales2 | y.wed_sales1 / x.wed_sales2 | y.thu_sales1 / x.thu_sales2 | y.fri_sales1 / x.fri_sales2 | y.sat_sales1 / x.sat_sales2 |
+---------------+------------------+-------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+
| able          | AAAAAAAACAAAAAAA | 5244        | 1.076792                    | 0.778544                    | 0.946441                    | 0.476809                    | 0.788629                    | 0.951729                    | 1.659272                    |
| able          | AAAAAAAACAAAAAAA | 5244        | 1.076792                    | 0.778544                    | 0.946441                    | 0.476809                    | 0.788629                    | 0.951729                    | 1.659272                    |
| able          | AAAAAAAACAAAAAAA | 5244        | 1.076792                    | 0.778544                    | 0.946441                    | 0.476809                    | 0.788629                    | 0.951729                    | 1.659272                    |
| able          | AAAAAAAACAAAAAAA | 5244        | 1.076792                    | 0.778544                    | 0.946441                    | 0.476809                    | 0.788629                    | 0.951729                    | 1.659272                    |
| able          | AAAAAAAACAAAAAAA | 5244        | 1.076792                    | 0.778544                    | 0.946441                    | 0.476809                    | 0.788629                    | 0.951729                    | 1.659272                    |
| able          | AAAAAAAACAAAAAAA | 5244        | 1.076792                    | 0.778544                    | 0.946441                    | 0.476809                    | 0.788629                    | 0.951729                    | 1.659272                    |
| able          | AAAAAAAACAAAAAAA | 5245        | 1.014758                    | 1.093794                    | 0.756045                    | 0.814522                    | 0.747020                    | 1.466939                    | 0.608641                    |
| able          | AAAAAAAACAAAAAAA | 5245        | 1.014758                    | 1.093794                    | 0.756045                    | 0.814522                    | 0.747020                    | 1.466939                    | 0.608641                    |
| able          | AAAAAAAACAAAAAAA | 5245        | 1.014758                    | 1.093794                    | 0.756045                    | 0.814522                    | 0.747020                    | 1.466939                    | 0.608641                    |
| able          | AAAAAAAACAAAAAAA | 5245        | 1.014758                    | 1.093794                    | 0.756045                    | 0.814522                    | 0.747020                    | 1.466939                    | 0.608641                    |
+---------------+------------------+-------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+-----------------------------+
