crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-cayenne[file]-indexes_tpch_q1.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q1"
---
+--------------+--------------+-------------+-----------------+-------------------+---------------------+--------------------+--------------------+----------------------+-------------+
| l_returnflag | l_linestatus | sum_qty     | sum_base_price  | sum_disc_price    | sum_charge          | avg_qty            | avg_price          | avg_disc             | count_order |
+--------------+--------------+-------------+-----------------+-------------------+---------------------+--------------------+--------------------+----------------------+-------------+
| A            | F            | 37734107.00 | 56586554400.73  | 53758257134.8700  | 55909065222.827692  | 25.522005853257337 | 38273.12973462172  | 0.04998529583838439  | 1478493     |
| N            | F            | 991417.00   | 1487504710.38   | 1413082168.0541   | 1469649223.194375   | 25.516471920522985 | 38284.4677608483   | 0.0500934266742165   | 38854       |
| N            | O            | 74476040.00 | 111701729697.74 | 106118230307.6056 | 110367043872.497010 | 25.50222676958499  | 38249.11798890826  | 0.049996586053730606 | 2920374     |
| R            | F            | 37719753.00 | 56568041380.90  | 53741292684.6040  | 55889619119.831932  | 25.50579361269077  | 38250.854626099645 | 0.05000940583011394  | 1478870     |
+--------------+--------------+-------------+-----------------+-------------------+---------------------+--------------------+--------------------+----------------------+-------------+
