crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-cayenne[file]-on_zero_results_tpcds_q83.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q83"
---
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
| item_id          | sr_item_qty | sr_dev | cr_item_qty | cr_dev | wr_item_qty | wr_dev | average            |
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
| AAAAAAAAANPDAAAA | 3           | 0.0    | 22          | 0.0    | 3           | 0.0    | 9.333333333333334  |
| AAAAAAAABCGEAAAA | 6           | 0.0    | 20          | 0.0    | 11          | 0.0    | 12.333333333333334 |
| AAAAAAAABDDAAAAA | 15          | 0.0    | 33          | 0.0    | 20          | 0.0    | 22.666666666666668 |
| AAAAAAAACEPBAAAA | 16          | 0.0    | 8           | 0.0    | 60          | 0.0    | 28.0               |
| AAAAAAAACJACAAAA | 28          | 0.0    | 12          | 0.0    | 4           | 0.0    | 14.666666666666666 |
| AAAAAAAACKBEAAAA | 19          | 0.0    | 35          | 0.0    | 24          | 0.0    | 26.0               |
| AAAAAAAADBGDAAAA | 22          | 0.0    | 68          | 0.0    | 63          | 0.0    | 51.0               |
| AAAAAAAADBPDAAAA | 9           | 0.0    | 2           | 0.0    | 2           | 0.0    | 4.333333333333333  |
| AAAAAAAADEFBAAAA | 21          | 0.0    | 92          | 0.0    | 44          | 0.0    | 52.333333333333336 |
| AAAAAAAADKAAAAAA | 2           | 0.0    | 52          | 0.0    | 26          | 0.0    | 26.666666666666668 |
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
