crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__file[parquet]-cayenne[file]-on_zero_results_tpcds_q85.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q85"
---
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
| substr(reason.r_reason_desc,Int64(1),Int64(20)) | avg(web_sales.ws_quantity) | avg(web_returns.wr_refunded_cash) | avg(web_returns.wr_fee) |
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
| Stopped working                                 | 18.0                       | 29.15                             | 57.69                   |
| Wrong size                                      | 7.0                        | 29.24                             | 14.81                   |
+-------------------------------------------------+----------------------------+-----------------------------------+-------------------------+
